Fix overflow

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -2,10 +2,14 @@
   margin: 0;
   padding: 0;
 }
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 body {
   color: var(--color);
   background-color: var(--background-color);
-  width: 100vw;
   margin: 0;
   padding: 0;
   // overflow-x: hidden;
