--- a/src/app/nav-bar.module.scss
+++ b/src/app/nav-bar.module.scss
@@ -1,8 +1,8 @@
 .nav-bar {
-  width: 100vw;
+  width: auto;
   height: 2.5rem;
-  margin: 0;
-  padding: 0;
+  margin: 0.375rem 0.5rem;
+  padding: 0.125rem 0.5rem;
   background-color: var(--nav-background-color);
   border: 1px #a9a9b7 solid;
   border-radius: 4px;
